[package]
name = "mindus"
version = "1.4.5"
edition = "2021"
description = "A library for working with mindustry data formats (eg schematics and maps) (fork of plandustry)"
authors = [
  "KosmosPrime <5663514+KosmosPrime@users.noreply.github.com>",
  "bend-n <bend.n@outlook.com>",
]
repository = "https://github.com/bend-n/mindus.git"
license = "GPL-3.0"
exclude = [".github/", "items.py"]

[dependencies]
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
base64 = "0.21"
paste = "1.0"
strconv = "0.1"
# png feature not needed; only for binary. todo seperate bin
image = { version = "0.24", features = ["png"], default-features = false }
color-hex = "0.2"
tinyrand = "0.5"
tinyrand-std = "0.5"
fast_image_resize = "2.7"
thiserror = "1.0"
bobbin-bits = "0.1"
blurslice = { version = "0.1", optional = true }
dashmap = { version = "5.5", features = ["inline"] }

[features]
schem_shadow = ["dep:blurslice"]
map_shadow = ["dep:blurslice"]
default = ["schem_shadow", "map_shadow"]

[build-dependencies]
image = { version = "0.24", features = ["png"], default-features = false }
walkdir = "2"

[[bin]]
name = "plandustry"
path = "src/exe/mod.rs"

[profile.release]
debug = 2
opt-level = 3
lto = true
incremental = true

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[dev-dependencies]
diff = "0.1"
