[package]
name = "mindus"
version = "3.0.1"
edition = "2021"
description = "A library for working with mindustry data formats (eg schematics and maps) (fork of plandustry)"
authors = [
  "KosmosPrime <5663514+KosmosPrime@users.noreply.github.com>",
  "bend-n <bend.n@outlook.com>",
]
repository = "https://github.com/bend-n/mindus.git"
license = "GPL-3.0"
exclude = [".github/", "items.py"]

[dependencies]
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
base64 = "0.21"
paste = "1.0"
strconv = "0.1"
image = { version = "0.24", features = [], default-features = false }
color-hex = "0.2"
thiserror = "1.0"
bobbin-bits = "0.1"
blurslice = { version = "0.1" }
enum_dispatch = "0.3"
ahash = { version = "0.8.3", default-features = false, features = ["std", "no-rng"] }

[features]
bin = ["image/png"]
default = ["bin"]

[build-dependencies]
image = { version = "0.24", features = ["png"], default-features = false }
walkdir = "2"

[[bin]]
name = "mindus"
doc = false
required-features = ["bin"]
path = "src/exe/mod.rs"

[profile.release]
debug = 2
opt-level = 3
lto = "thin"
incremental = true

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[dev-dependencies]
diff = "0.1"
