[package]
name = "plandustry"
version = "1.0.2"
edition = "2021"
description = "A command-line tool for working with Mindustry schematics"
authors = ["KosmosPrime <5663514+KosmosPrime@users.noreply.github.com>"]
repository = "https://github.com/KosmosPrime/plandustry.git"
license = "GPL-3.0"

[dependencies]
flate2 = {version = "1.0", features = ["zlib"], default-features = false}

[[bin]]
name = "plandustry"
path = "src/exe/mod.rs"
